tests #95 : Station Controller tests