@@ -59,13 +59,13 @@ public class StationController extends Controller{
         // Basically, when it's your first time claiming, you must select 1 card
         // Then, you must select 2 cards, and so on
         // The cards has to be the same color
-        if (removedCards.size() != (STARTING_STATIONS - (stationsLeft-1))) {
+        if (removedCards.size() != getNumberOfRequiredCards(stationsLeft)) {
             player.replaceRemovedWagonCards(removedCards);
             return Optional.of(ReasonActionRefused.STATION_NOT_ENOUGH_WAGON_CARDS);
         }
 
         // Check if the cards are the same color
-        WagonCard firstCard = removedCards.get(0);
+        WagonCard firstCard = removedCards.getFirst();
         boolean allCardsHaveSameColor = removedCards.stream().allMatch(
                 card -> card.getColor() == firstCard.getColor()
                         || card.getColor() == Color.ANY
@@ -94,5 +94,9 @@ public class StationController extends Controller{
     @Override
     public boolean resetGame() {
         return gameModel.setAllStationsNotClaimed();
+    }
+
+    private int getNumberOfRequiredCards(int stationsLeft) {
+        return STARTING_STATIONS - (stationsLeft - 1);
     }
 }
